@startuml
'skinparam nodesep 15
'skinparam ranksep 55
'skinparam linetype ortho

left to right direction
hide empty members

note top of GameController
Vi bruger:
- TestView som View
- TestIO som BasicUserIO
end note
class GameController {
    + void playGame()
}
interface BasicUserIO {
    ~ int promptChoice(Message, Message...)
    ~ void showMessage(Message)
}

class TestView {
    + void update(Player[], Field[], DiceCup)
}

interface View {
    ~ void update(Player[], Field[], DiceCup)
}
class TestIO{
    ~ int promptChoice(Message, Message...)
    + void showMessage(Message)
}

View -right[hidden]-> BasicUserIO
GameController o-- BasicUserIO
GameController o-- View
TestView .up.|> View
TestIO .up.|> BasicUserIO
@enduml
